# GeoInk-Core

./: build.gradle  module.gradle  update.json
.github/workflows/: android.yml
geoink_core/magisk_module/: customize.sh  module.prop
module/: build.gradle
module/rust/: Cargo.toml
module/rust/src/: api.rs  lib.rs  macros.rs  module.rs
module/src/main/: AndroidManifest.xml
