[package]
name = "geoink_core"
version = "0.0.1"
edition = "2021"
authors = ["HanSoBored <raihanzxx@gmail.com>"]

[dependencies]
bitflags = "1.3.2"
jni = "0.19.0"
log = "0.4.14"
libc = "0.2"

[lib]
name = "geoink_core"
crate-type = ["dylib"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11"
